Fixed display corruption on iOS

--- a/resources/sass/components/_footer.scss
+++ b/resources/sass/components/_footer.scss
@@ -151,7 +151,7 @@
 
     @media (max-width: $changeLayoutWidth) {
         margin: -1.5rem .25rem 3rem;
-        filter: blur(0.25px);
+        filter: blur(0);
     }
 
     i {
